2023-05-31 corrección de error gramátical.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
@@ -257,8 +257,8 @@
                         title: 'Mensaje',
                         html: `<h4>¿Qué tipo de Solicitud desea crear?</h4>
                                 <br/>
-                                <p style="text-align:justify;"><span style="color:#3085d6">Nuevo Ingreso:</span> Seleccione está opción para nuevos colaboradores.</p>
-                                <p style="text-align:justify;"><span style="color:#159B60">Modificación:</span> Seleccione está opción si el colaborador ya estaba registrado previamente en el sistema.</p>
+                                <p style="text-align:justify;"><span style="color:#3085d6">Nuevo Ingreso:</span> Seleccione esta opción para nuevos colaboradores.</p>
+                                <p style="text-align:justify;"><span style="color:#159B60">Modificación:</span> Seleccione esta opción si el colaborador ya estaba registrado previamente en el sistema.</p>
                          `,
                         showDenyButton: creacion,
                         showCancelButton: true,
